[project]
version = "0.1.48"
description = ""
requires-python = ">=3.10"
dynamic = ["classifiers"]
name = "lev.whtcjdtc2008.nmap"
dependencies = [
    "levrt>=1.3.10",
    "bs4>=0.0.1",
]

[[project.authors]]
name = "Haotian.Wang"
email = "whtcjdtc2007@163.com"

[project.license]
text = "MIT"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
[tool.pdm]
editable-backend = "path"
includes = ["lev"]

[[tool.pdm.source]]
name = "levhub"
url = "https://__token__:${LEVHUB_TOKEN}@pypi.lev.zone/simple/"
